grammar.ebnf
/* Terminals */
KeywordFn        ::= "fn"
KeywordReturn    ::= "return"
OperatorPlus     ::= "+"
Identifier       ::= Letter (Letter | Digit | "_")*
IntLiteral       ::= Digit+
LParen           ::= "("
RParen           ::= ")"
LBrace           ::= "{"
RBrace           ::= "}"
Semicolon        ::= ";"

Letter           ::= [a-zA-Z]
Digit            ::= [0-9]

BinaryOperator   ::= OperatorPlus

/* Non-Terminals */

Program          ::= Function

Function         ::= KeywordFn Identifier LParen RParen Identifier Block

Block            ::= LBrace Statement* RBrace

Statement        ::= ReturnStatement

ReturnStatement  ::= KeywordReturn Expression Semicolon

Expression       ::= IntLiteral (BinaryOperator IntLiteral)*
